--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 		<title>Demo</title>
 	</head>
 	<body>
-		<p>
-			Hello
-			<span style="display: none">great</span>
-			world
-		</p>
+		<p> Hello <span style="display: none"> great </span> world </p>
 	</body>
 </html>
